mexico focus tree
continuation of change of course branch development

--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -495,7 +495,7 @@ MEX_tierra_y_libertad: "Tierra y Libertad"
 MEX_tierra_y_libertad_desc: ""
 
 
-# Partido Alianza Social
+# Partido Alianza Social (Change of course)
 
 MEX_partido_alianza_social: "Partido Alianza Social"
 MEX_partido_alianza_social_desc: ""
@@ -535,7 +535,211 @@ MEX_supporting_the_farmers: "Supporting the Farmers"
 MEX_supporting_the_farmers_Desc: ""
 MEX_mexican_patriotism: "Mexican Patriotism"
 MEX_mexican_patriotism_desc: ""
+MEX_strong_mexican_identity: "Strong Mexican Identity"
+MEX_strong_mexican_identity_desc: ""
+MEX_hispanidad: "Hispanidad"
+MEX_hispanidad_desc: ""
+MEX_national_infrastructure_projects: "National Infrastructure Projects"
+MEX_national_infrastructure_projects_Desc: ""
+MEX_prioritizing_national_sovereignty: "Prioritizing National Sovereignty"
+MEX_prioritizing_national_sovereignty_Desc: ""
+MEX_establising_juventud_sinarquista: "Establishing Juventud Sinarquista"
+MEX_establising_juventud_sinarquista_desc: ""
+MEX_mexican_synarchism: "Mexican Synarchism"
+MEX_mexican_synarchism_desc: ""
 
+# Frente Nacionalista (Change of course)
+
+MEX_frente_nacionalista: "Frente Nacionalista"
+MEX_frente_nacionalista_desc: ""
+MEX_nationalist_youth_front: "Nationalist Youth Front"
+MEX_nationalist_youth_front_desc: ""
+MEX_far_right_rise: "Far Right Rise"
+MEX_far_right_rise_desc: ""
+MEX_mexico_first: "Mexico First"
+MEX_mexico_first_Desc: ""
+MEX_the_mexican_family: "The Mexican Family"
+MEX_the_mexican_family_desc: ""
+MEX_reviving_mexicos_grandeur: "Reviving Mexico's Grandeur"
+MEX_reviving_mexicos_grandeur_desc: ""
+MEX_promoting_indigenous_rights: "Promoting Indigenous Rights"
+EX_promoting_indigenous_rights_desc: ""
+MEX_fighting_the_zapatistas: "Fighting the Zapatistas"
+MEX_fighting_the_zapatistas_desc: ""
+MEX_we_are_all_mexicans: "We are all Mexicans"
+MEX_we_are_all_mexicans_desc: ""
+MEX_reactivation_of_the_countryside: "Reactivation of the Countryside"
+MEX_reactivation_of_the_countryside_desc: ""
+MEX_national_military_service: "National Military Service"
+MEX_national_military_service_desc: ""
+MEX_national_military_investment: "National Military Investment"
+MEX_national_military_investment_Desc: ""
+MEX_sovereignty_in_religous_freedoms: "Sovereignty in Religious Freedom"
+MEX_sovereignty_in_religous_freedoms_desc: ""
+MEX_refoundation_of_the_mexican_state: "Refoundation of the Mexican State"
+MEX_refoundation_of_the_mexican_state_desc: ""
+MEX_mexican_owned_banks: "Mexican Owned Banks"
+MEX_mexican_owned_banks_desc: ""
+MEX_mexican_autarky: "Mexican Autarky"
+MEX_mexican_autarky_desc: ""
+MEX_corporate_tax_reform: "Corporate Tax Reform"
+MEX_corporate_tax_reform_desc: ""
+MEX_one_party_one_state: "One Party State"
+MEX_one_party_one_state_desc: ""
+MEX_agrian_reform: "Agrarian Reform"
+MEX_agrian_reform_desc: ""
+MEX_strenghting_the_middle_class: "Strenthening the Middle Class"
+MEX_strenghting_the_middle_class_desc: ""
+MEX_nationalize_government_companies: "Nationalize Government Companies"
+MEX_nationalize_government_companies_desc: ""
+MEX_collective_well_being: "Collective Well Being"
+MEX_collective_well_being_desc: ""
+MEX_state_of_workers: "State of Workers"
+MEX_state_of_workers_desc: ""
+MEX_a_green_mexico: "A Green Mexico"
+MEX_a_green_mexico_desc: ""
+MEX_territorial_organization: "Territorial Organization"
+MEX_territorial_organization_desc: ""
+MEX_displacing_corrupt_officials: "Displacing Corrupt Officials"
+MEX_displacing_corrupt_officials_Desc: ""
+MEX_creation_of_national_police: "Creation of National Police"
+MEX_creation_of_national_police_desc: ""
+MEX_reinstatement_of_the_death_penalty: "Reinstatement of the Death Penalty"
+MEX_reinstatement_of_the_death_penalty_desc: ""
+MEX_prisons_become_work_camps: "Prisions Become Work Camps"
+MEX_prisons_become_work_camps_Desc: ""
+MEX_withdrawing_from_international_treaties: "Withdrawing from International Treaties"
+MEX_withdrawing_from_international_treaties_Desc: ""
+MEX_restructuring_our_debt: "Restructuring our Debt"
+MEX_restructuring_our_debt_desc: ""
+MEX_expulsion_of_foreign_intereventiost_forces: "Expulsion of Foreign Interventionist Forces"
+MEX_expulsion_of_foreign_intereventiost_forces_Desc: ""
+MEX_national_pride: "National Pride"
+MEX_national_pride_desc: ""
+MEX_state_controlled_media: "State Controlled Media"
+MEX_state_controlled_media_desc: ""
+MEX_combating_immigration: "Combating Immigration"
+MEX_combating_immigration_desc: ""
+MEX_restructuring_of_the_education_system: "Restructuring of the Education System"
+MEX_restructuring_of_the_education_system_Desc: ""
+MEX_recalling_mexicans_abroad: "Recalling Mexicans Abroad"
+MEX_recalling_mexicans_abroad_desc: ""
+MEX_reform_for_the_majorites: "Reform for the Majorities"
+MEX_reform_for_the_majorites_Desc: ""
+MEX_expansion_of_healthcare: "Expansion of Healthcare"
+MEX_expansion_of_healthcare_Desc: ""
+MEX_pride_in_the_armed_forces: "Pride in the Armed Forces"
+MEX_pride_in_the_armed_forces_desc: ""
+
+
+# Military Junta (Change of course)
+
+MEX_military_seizure_of_power: "Military Seizure of Power"
+MEX_military_seizure_of_power_Desc: ""
+MEX_centralization_of_power_mj: "Centralization of Power"
+MEX_centralization_of_power_mj_Desc: ""
+MEX_appointment_of_military_offcials: "Appointment of Military Officials"
+MEX_appointment_of_military_offcials_Desc: ""
+MEX_crackdown_on_media: "Crackdown on Media"
+MEX_crackdown_on_media_desc: ""
+MEX_suspension_of_the_constitution: "Suspension of the Constitution"
+MEX_suspension_of_the_constitution_Desc: ""
+MEX_crackdown_on_the_opposition: "Crackdown on the Opposition"
+MEX_crackdown_on_the_opposition_Desc: ""
+MEX_purge_rival_officers: "Purge Rival Officers"
+MEX_purge_rival_officers_desc: ""
+MEX_limit_personal_freedoms: "Limit Personal Freedoms"
+MEX_limit_personal_freedoms_Desc: ""
+MEX_declaration_of_martial_law: "Declaration of Martial Law"
+MEX_declaration_of_martial_law_desc: ""
+MEX_consolidate_military_rule: "Consolidate Military Rule"
+MEX_consolidate_military_rule_Desc: ""
+MEX_securing_our_legitimacy: "Securing our Legitimacy"
+MEX_securing_our_legitimacy_Desc: ""
+MEX_economic_policies: "Economic Policies"
+MEX_economic_policies_Desc: ""
+MEX_open_economy: "Open Economy"
+MEX_open_economy_desc: ""
+MEX_isolationist_economy: "Isolationist Economy"
+MEX_isolationist_economy_Desc: ""
+MEX_nationalizing_foreign_industries: "Nationalizing Foreign Industries"
+MEX_nationalizing_foreign_industries_desc: ""
+MEX_state_led_economy: "State Led Economy"
+MEX_state_led_economy_Desc: ""
+MEX_increase_reliance_on_investors: "Increase Reliance on Investors"
+MEX_increase_reliance_on_investors_desc: ""
+MEX_reduce_reliance_on_investors: "Reduce Reliance on Inverstors"
+MEX_reduce_reliance_on_investors_desc: ""
+MEX_befriending_military_led_governments: "Befriending Military Led Governments"
+MEX_befriending_military_led_governments_desc: ""
+MEX_cooperation_with_nato: "Cooperation with NATO"
+MEX_cooperation_with_nato_Desc: ""
+MEX_rival_nato: "Rival NATO"
+MEX_rival_nato_Desc: ""
+MEX_cooperation_with_unasul: "Cooperation with UNASUL"
+MEX_cooperation_with_unasul_Desc: ""
+MEX_rival_unasul: "Rival UNASUL"
+MEX_rival_unasul_Desc: ""
+MEX_Fighting_foreign_influence: "Fighting Foreign influence"
+MEX_Fighting_foreign_influence_Desc: ""
+MEX_concentrate_on_our_problems: "Concentrate on Our Problems"
+MEX_concentrate_on_our_problems_Desc: ""
+MEX_anti_corruption_measures: "Anti-Corruption Measures"
+MEX_anti_corruption_measures_Desc: ""
+MEX_fighting_the_cartels: "Fighting the Cartels"
+MEX_fighting_the_cartels_Desc: ""
+MEX_militarized_education: "Militarized Education"
+MEX_militarized_education_desc: ""
+MEX_government_transparency: "Government Transparency"
+MEX_government_transparency_desc: ""
+MEX_fighting_poverty: "Fighting Poverty"
+MEX_fighting_poverty_Desc: ""
+MEX_endorsing_military_academies: "Endorsing Military Academies"
+MEX_endorsing_military_academies_Desc: ""
+MEX_bolstering_the_armed_forces: "Bolstering the Armed Forces"
+MEX_bolstering_the_armed_forces_desc: ""
+MEX_integrating_military_defense_conglomerates: "integrating Military Defense Conglomerates"
+MEX_integrating_military_defense_conglomerates_DEsc: ""
+MEX_increase_aircraft_production: "Increase Aircraft Production"
+MEX_increase_aircraft_production_Desc: ""
+MEX_expansion_of_sedena: "Expansion of SEDENA"
+MEX_expansion_of_sedena_Desc: ""
+MEX_semar_investments: "SEMAR Investments"
+MEX_semar_investments_Desc: ""
+MEX_constructing_air_bases: "Constructing Air Bases"
+MEX_constructing_air_bases_Desc: ""
+MEX_improving_naval_infrastructure: "Improving Naval Infrastructure"
+MEX_improving_naval_infrastructure_Desc: ""
+MEX_increased_military_wages: "Increased Military Wages"
+MEX_increased_military_wages_Desc: ""
+
+
+# Monarchist path (Change of course)
+
+MEX_mexicos_imperial_past: "Mexico's Imperial Past"
+MEX_mexicos_imperial_past_Desc: ""
+MEX_question_of_the_thrones: "Question of the Thrones"
+MEX_question_of_the_thrones_Desc: ""
+MEX_a_mexican_emperor: "A Mexican Emperor"
+MEX_a_mexican_emperor_desc: ""
+MEX_a_austrian_emperor: "An Austrian Emperor"
+MEX_a_austrian_emperor_desc: ""
+MEX_crowning_the_emperor: "Crowning the Emperor"
+MEX_crowning_the_emperor_Desc: ""
+MEX_coronation_speech: "Coronation Speech"
+MEX_coronation_speech_Desc: ""
+MEX_a_new_constitution: "A New Constitution"
+MEX_a_new_constitution_Desc: ""
+MEX_seeking_church_support: "Seeking Church Support"
+MEX_seeking_church_support_Desc: ""
+MEX_dissolving_congress: "Dissolving Congress"
+MEX_dissolving_congress_Desc: ""
+MEX_crusade_againist_democracy: "Crusade Against Democracy"
+MEX_crusade_againist_democracy_DESc: ""
+MEX_empowering_the_military: "Empowering the Military"
+MEX_empowering_the_military_Desc: ""
+MEX_boosting_military_spending: "Boosting Military Spending"
+MEX_boosting_military_spending_Desc: ""
 
 
 
