--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -1207,11 +1207,11 @@
  denmark.100.a: "Continue the Autonomy"
  denmark.100.b: "Reign in Ertholemene"
 
- denmark.300.t: "the fire Cronicles begin"
- denmark.300.d: "a random Guy from Danmark that film him self playing games and get famouse in the MD Community decide to buy a Farm in Danish Outback"
- denmark.300.a: "Gingers get Landowners? this country is done"
- denmark.300.b: "does he have onlyFans?"
- denmark.300.c: "whole of Denmark is literaly Outback"
+ denmark.300.t: "The Fire Chronicles Begin"
+ denmark.300.d: "A random Guy from Denmark that film himself playing games and get famous in the MD Community decide to buy a Farm in Danish Outback."
+ denmark.300.a: "Gingers get Landowners? This country is done!"
+ denmark.300.b: "Does he have onlyFans?"
+ denmark.300.c: "Whole of Denmark is literally Outback."
 
  denmark_news.1.t: "Abdication of Margrethe II"
  denmark_news.1.d: "News from Denmark has come out stating the [DEN.GetAdjective] Queen has chosen to abdicate her throne via pressure of the growing left extremism in Denmark. The supporters of Danmarks Kommunistiske Parti (DKP) have taken to the streets in happiness as one of the last bastions of the old ways has finally been removed. The former queen has taken refuge with the House of Windsor in Great Britian.\n"
