--- a/localisation/english/MD_focus_EU_l_english.yml
+++ b/localisation/english/MD_focus_EU_l_english.yml
@@ -420,7 +420,7 @@
  par_vote_wait_no_flag: "The §YEuropean Parliament§! is ready for session."
  con_vote_wait: "The §YEuropean Council§! recently counclded session. Days until Next Session: §Y[?delay_player_next_council_vote:days_left|0Y] Days§!"
  con_vote_wait_no_flag: "The §YEuropean Council§! is ready for session."
- eu_canidates_considering: "The §YEuropean Council§! is not currently considering any EU candidates"
+ eu_candidates_considering: "The §YEuropean Council§! is not currently considering any EU candidates"
  EU_parliament_PG_Western_Autocracy_influence: "Influence [EU_parliament_PG_Western_Autocracy_icon]"
  EU_parliament_PG_Western_Autocracy_influence_desc: "Influence [EU_parliament_PG_Western_Autocracy_icon] [EU_parliament_PG_Western_Autocracy_name] on the current issue on the agenda"
  EU_parliament_PG_conservatism_influence: "Influence [EU_parliament_PG_conservatism_icon]"
@@ -704,7 +704,7 @@
  eda_pass_tt: "Requires the §YEuropean Defence Agency§! to have passed the EU Council"
  frontex_pass_tt: "Requires §YFrontex§! to have passed the EU Council"
  vote_requirements_tt: "§Y[name_of_reform]§!\n-----------\n§YPrerequisties:§!\n[!name_of_available_reform_button_click_enabled]\n§YEffects:§!\n[!name_of_available_reform_button_click]"
- eu_canidates_tt: "Requires European Union Canidates to exist"
+ eu_candidates_tt: "Requires European Union Candidates to exist"
  2013_enlargement_pass_tt: "Requires §Y2013 EU Enlargement§! to have passed the EU Council"
  allow_2013_enlargement_tt: "Requires §Y2007 EU Enlargement§! to have passed the EU Council"
  allow_2007_enlargement_tt: "Requires §Y2004 EU Enlargement§! to have passed the EU Council"
