mex tree continuation 2

--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -1383,8 +1383,8 @@ MEX_enhanced_port_security: "Enhanced Port Security"
 MEX_enhanced_port_security_desc: ""
 MEX_increased_border_patrols: "Increased Border Patrols"
 MEX_increased_border_patrols_desc: ""
-MEX_increased_border_patrols: "Increased Border Patrols"
-MEX_increased_border_patrols_desc: ""
+MEX_us_border_patrol_cooperation: "US Border Patrol Cooperation"
+MEX_us_border_patrol_cooperation_desc: ""
 MEX_major_police_reforms: "Major Police Reforms"
 MEX_major_police_reforms_desc: ""
 MEX_dismissing_corrupt_police_officers: "Dismissing Corrupt Police Officers"
@@ -1449,7 +1449,32 @@ MEX_judicial_reforms: "Judicial Reforms"
 MEX_judicial_reforms_desc: ""
 MEX_increased_transparency: "Increased Transparency"
 MEX_increased_transparency_desc: ""
-
+MEX_strengthen_judicial_independence: "Strengthen Judicial Independence"
+MEX_strengthen_judicial_independence_desc: ""
+MEX_legal_access_for_all: "Legal Access for All"
+MEX_legal_access_for_all_desc: ""
+MEX_enhanced_judicial_training: "Enhanced Judicial Training"
+MEX_enhanced_judicial_training_desc: ""
+MEX_alternative_dispute_resolutions: "Alternative Dispute Resolutions"
+MEX_alternative_dispute_resolutions_desc: ""
+MEX_purge_corrupt_judges: "Purge Corrupt Judges"
+MEX_purge_corrupt_judges_desc: ""
+MEX_enforce_anti_corruption_measures: "Enforce Anti-Corruption Measures"
+MEX_enforce_anti_corruption_measures_desc: ""
+MEX_fight_tax_fraud: "Fight Tax Fraud"
+MEX_fight_tax_fraud_desc: ""
+MEX_enhanced_surveillance_and_enforcement: "Enhanced Surveillance and Enforcement"
+MEX_enhanced_surveillance_and_enforcement_desc: ""
+MEX_increasing_tax_revenue: "Increasing Tax Revenue"
+MEX_increasing_tax_revenue_desc: ""
+MEX_tax_compliance_awareness: "Tax Compliance Awareness"
+MEX_tax_compliance_awareness_desc: ""
+MEX_banking_and_financial_controls: "Banking and Financial Controls"
+MEX_banking_and_financial_controls_desc: ""
+MEX_mandatory_electroninc_invoicing: "Mandatory Electronic Invoicing"
+MEX_mandatory_electroninc_invoicing_desc: ""
+MEX_whistle_blower_programs: "Whistle Blower Programs"
+MEX_whistle_blower_programs_desc: ""
 
 
 
