--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -861,7 +861,7 @@ MEX_viva_mexico: "Viva Mexico"
 MEX_viva_mexico_desc: ""
 
 
-# Left Wing Victory branch (Status Quo)
+# Socialist Victory branch (Status Quo)
 
 MEX_left_wing_victory: "A Socialist Mexico"
 MEX_left_wing_victory_desc: ""
@@ -907,6 +907,14 @@ MEX_empower_labor_unions: "Empower Labor Unions"
 MEX_empower_labor_unions_desc: ""
 MEX_creation_of_public_universities: "Creation of Public Universities"
 MEX_creation_of_public_universities_desc: ""
+MEX_state_interventionism: "State Interventionism"
+MEX_state_interventionism_desc: ""
+MEX_tax_the_rich: "Tax the Rich"
+MEX_tax_the_rich_desc: ""
+MEX_creation_of_a_welfare_state: "Creation of a Welfare State"
+MEX_creation_of_a_welfare_state_desc: ""
+MEX_our_socialist_brothers_abroad: "Our Socialist Brothers Abroad"
+MEX_our_socialist_brothers_abroad_desc: ""
 MEX_strengthing_the_inner_market: "Strengthening the Inner Market"
 MEX_strengthing_the_inner_market_desc: ""
 MEX_universal_healthcare: "Universal Healthcare"
@@ -1142,7 +1150,7 @@ MEX_endorsing_military_academies: "Endorsing Military Academies"
 MEX_endorsing_military_academies_desc: ""
 MEX_bolstering_the_armed_forces: "Bolstering the Armed Forces"
 MEX_bolstering_the_armed_forces_desc: ""
-MEX_integrating_military_defense_conglomerates: "integrating Military Defense Conglomerates"
+MEX_integrating_military_defense_conglomerates: "Integrating Military Defense Conglomerates"
 MEX_integrating_military_defense_conglomerates_desc: ""
 MEX_increase_aircraft_production: "Increase Aircraft Production"
 MEX_increase_aircraft_production_desc: ""
@@ -1475,6 +1483,80 @@ MEX_mandatory_electroninc_invoicing: "Mandatory Electronic Invoicing"
 MEX_mandatory_electroninc_invoicing_desc: ""
 MEX_whistle_blower_programs: "Whistle Blower Programs"
 MEX_whistle_blower_programs_desc: ""
+MEX_the_catholic_church: "The Catholic Church"
+MEX_the_catholic_church_desc: ""
+MEX_a_secular_mexico: "A Secular Mexico"
+MEX_a_secular_mexico_desc: ""
+MEX_a_devout_catholic_state: "A Devout Catholic State"
+MEX_a_devout_catholic_state_desc: ""
+MEX_limit_church_offerings: "Limit Church Offerings"
+MEX_limit_church_offerings_desc: ""
+MEX_economic_support_for_the_church: "Economic Support for the Church"
+MEX_economic_support_for_the_church_desc: ""
+MEX_taking_churches: "Taking Churches"
+MEX_taking_churches_desc: ""
+MEX_seek_church_support: "Seek Church Support"
+MEX_seek_church_support_desc: ""
+MEX_abolish_religious_teachings_in_schools: "Abolish Religious Teachings in School"
+MEX_abolish_religious_teachings_in_schools_desc: ""
+MEX_consult_the_pope_on_political_matters: "Consult the Pope on Political Matters"
+MEX_consult_the_pope_on_political_matters_desc: ""
+MEX_a_pluralist_mexico: "A Pluralist Mexico"
+MEX_a_pluralist_mexico_desc: ""
+MEX_a_catholic_government: "A Catholic Government"
+MEX_a_catholic_government_desc: ""
+MEX_mexican_foreign_policy: "Mexican Foreign Policy"
+MEX_mexican_foreign_policy_desc: ""
+MEX_claiming_central_america: "Claiming Central America"
+MEX_claiming_central_america_desc: ""
+MEX_building_southern_defenses: "Building Southern Defenses"
+MEX_building_southern_defenses_desc: ""
+MEX_demanding_guatemalan_submission: "Demanding Guatemalan Submission"
+MEX_demanding_guatemalan_submission_desc: ""
+MEX_invasion_of_honduras: "Invasion of Honduras"
+MEX_invasion_of_honduras_desc: ""
+MEX_reclaim_el_salvador: "Reclaim El Salvador"
+MEX_reclaim_el_salvador_desc: ""
+MEX_reclaim_belize: "Reclaim Belize"
+MEX_reclaim_belize_desc: ""
+MEX_reclaiming_nicaragua: "Reclaiming Nicaragua"
+MEX_reclaiming_nicaragua_desc: ""
+MEX_reclaiming_costa_rica: "Reclaiming Costa Rica"
+MEX_reclaiming_costa_rica_desc: ""
+MEX_operation_just_cause: "Operation Just Cause"
+MEX_operation_just_cause_desc: ""
+MEX_reintegration_into_the_empire: "Reintegration into the Empire"
+MEX_reintegration_into_the_empire_desc: ""
+MEX_denouncing_the_mexican_cession: "Denouncing the Mexican Cession"
+MEX_denouncing_the_mexican_cession_desc: ""
+MEX_militarization_of_our_borders: "Militarization of Our Borders"
+MEX_militarization_of_our_borders_desc: ""
+MEX_destabilizing_the_southern_border: "Destabilizing the Southern Border"
+MEX_destabilizing_the_southern_border_desc: ""
+MEX_calling_on_chicano_nationalist_abroad: "Calling on Chicano Nationalist Abroad"
+MEX_calling_on_chicano_nationalist_abroad_desc: ""
+MEX_rescind_the_treaty_of_guadalupe_hidalgo: "Rescind the Treaty of Guadalupe Hidalgo"
+MEX_rescind_the_treaty_of_guadalupe_hidalgo_desc: ""
+MEX_revenge_for_french_intervention: "Revenge for French Intervention"
+MEX_revenge_for_french_intervention_desc: ""
+MEX_cuban_literation: "Cuban Literation"
+MEX_cuban_literation_desc: ""
+MEX_haitian_subjugation: "Haitian Subjugation"
+MEX_haitian_subjugation_desc: ""
+MEX_dominican_domination: "Dominican Domination"
+MEX_dominican_domination_desc: ""
+MEX_puerto_rican_self_rule_resolution: "Puerto Rican Self Rule Resolution"
+MEX_puerto_rican_self_rule_resolution_desc: ""
+MEX_montezumacs_revenge: "Montezumac's Revenge"
+MEX_montezumacs_revenge_desc: ""
+MEX_pass_the_darien_gap: "Pass the Darien Gap"
+MEX_pass_the_darien_gap_desc: ""
+MEX_peruvian_submission: "Peruvian Submission"
+MEX_peruvian_submission_desc: ""
+MEX_venezuelan_liberation: "Venezuelan Liberation"
+MEX_venezuelan_liberation_desc: ""
+MEX_condor_strike: "Condor Strike"
+MEX_condor_strike_desc: ""
 
 
 
