Fixed incoming financial collapse debt lock bug

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -27,6 +27,7 @@ v1.10.3
   - Fixed the incorrect party description for Venezuela Military Junta being South Ossetian for some reason
   - Fixed the Nigerian parties not properly showing their icon in coalitions
   - Fixed the starting Mexican elections
+  - Fixed the debt button not being able to be clicked when you have "Incoming Financial Collapse"
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
