Fixes for Timor stuff and a UN Party icon for Timor

--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8186,7 +8186,7 @@
  TIM.Neutral_Autocracy_desc: "Autocracy refers to a broad spectrum of non-democratic, authoritarian ideologies where all power is placed in the hands of a single ruler."
  #UN Timor neutral autocrat
  TIM.Neutral_Autocracy_UNTAET: "£generic_Neutral_Autocracy_small The United Nations Transitional Administration in East Timor"
- TIM.Neutral_Autocracy_UNTAET_icon: "£generic_Neutral_Autocracy_small" #£TIM_UNTAET
+ TIM.Neutral_Autocracy_UNTAET_icon: "£TIM_Neutral_Autocracy_UNTAET"
  TIM.Neutral_Autocracy_UNTAET_desc: "Also known as UNTAET - Was a special diplomatic mission established by none other than the United Nations in October 1999 to restore peace in East Timor and oversee their accession into the international community."
  ###End of Timor neutral autocrat###
  TIM.Neutral_conservatism: "£generic_Neutral_conservatism_small Christian Democratic Union of Timor"
