--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -300,6 +300,7 @@
  SOV_kal_with_income_loc: "$$[?additional_income_SOV_kal_with|+3] from §YPotassium Trade§!\n"
  BLR_kal_without_income_loc: "$$[?additional_income_BLR_kal_without|+3] from §YPotassium Trade§!\n"
  DPR_rf_money_income_loc: "$$[?additional_income_DPR_rf_money|+3] from §YRussia§!\n"
+ additional_income_TIM_un_support_loc: "$$[?additional_income_TIM_un_support|+3] from §Y$UN Humanitarian Support$§!\n"
  UKR_russian_gas_sov_income_loc: "$$[?additional_income_UKR_russian_gas_sov|+3] for the energy contract with §Y[UKR.GetFlag]Ukraine§!\n"
  UKR_russian_gas_cheap_sov_income_loc: "$$[?additional_income_UKR_russian_gas_cheap_sov|+3] for the energy contract with §Y[UKR.GetFlag]Ukraine§!\n"
  UKR_russian_gas_cheaper_sov_income_loc: "$$[?additional_income_UKR_russian_gas_cheaper_sov|+3] for the energy contract with §Y[UKR.GetFlag]Ukraine§!\n"
