Retweaked Chinese PLA Business Ventures idea with new modifiers

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ v1.10.3
   - Conscription laws reduce migration rate on Partial Draft and Draft Army
   - Limited the 1000 Debt button requiring you to have at least 1t in GDP to take 1t in debt
   - Increased the likelihood of Ag District conversion events
+  - Retweaked Chinese PLA Business Ventures idea with new modifiers
 
  Bugfix:
   - Fixed a couple focuses for France where the Stage: focuses were going to the wrong continent
