--- a/localisation/english/MD_focus_NOR_l_english.yml
+++ b/localisation/english/MD_focus_NOR_l_english.yml
@@ -83,7 +83,7 @@
  NOR_pesticide_distribution: "Pesticide Distribution"
  NOR_pesticide_distribution_desc: "We never thought this would be a problem in our climate, but Norway may be under attack...by insects."
  NOR_forsavet: "Forsvaret"
- NOR_forsavet_desc: "The bravery and adaptability of great armed forces are ready to defend against any danger, night and day. They are trained for all conditions and know their mission, to protect the Norwegian people for their continued peace and liberty."
+ NOR_forsavet_desc: "The bravery and adaptability of our great armed forces are ready to defend against any danger, night and day. They are trained to face any conditions and know their mission, to protect the Norwegian people for their continued peace and liberty."
  NOR_sjorforsvaret: "Sjørforsvaret"
  NOR_sjorforsvaret_desc: "The main purpose of our navy is to protect the interest of our trade, although it isn't challenge very often. We still require a deterrence force to command the seas that we have a right to."
  NOR_haakonsvern_naval_base: "Haakonsvern Naval Base"
