historical events and some loc work

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -115,7 +115,7 @@
  
  #Economy
  HKG_under_lion_rock_hill: "Below the Lion Rock"
- HKG_under_lion_rock_hill_desc: "Below the Lion Rock, Hong Kong, where has just experienced the financial turmoil and entered the new millennium, is facing many social problems. How to solve them, is left to the judgement of people."
+ HKG_under_lion_rock_hill_desc: "§COn the same boat beneath the Rock we’ll strive as one\n\nAll equal under the Sun.\n\nWhen we free and united be\n\nPursue our dreams of joy\n\nTogether, one soul, one heart\n\nOne hope no fear can destroy.\n\nWhere ends the sky and sea\n\nJoin hands, and walk with me\n\nTo overcome, and triumph in our fight to write\n\nOur tale of home, shining bright.§!"
  HKG_race_discrimination_bill: "Race Discrimination Bill"
  HKG_race_discrimination_bill_desc: "The Basic Law and the Hong Kong Bill of Rights Ordinance safeguard the rights of individuals, including the right against racial discrimination. We also have obligation, under the International Convention on the Elimination of All Forms of Racial Discrimination, to prohibit and to eliminate racial discrimination."
  HKG_LGBT_rights: "LGBT Rights"
@@ -140,8 +140,7 @@
  HKG_require_greater_transparency_from_employers_desc: ""
  HKG_deny_existence_of_pay_gap: "Deny the Existence of the Pay Gap"
  HKG_deny_existence_of_pay_gap_desc: ""
- HKG_gong_hei_fat_coi: "Gong Hei Faat Choy"
- HKG_gong_hei_fat_coi_desc: ""
+
  HKG_secondary_school_education_reform: "Secondary School Education Reform"
  HKG_secondary_school_education_reform_desc: "Secondary Education's old 3-2-2-3 system that used to exist in secondary schools will be reformed into the 3-3-4 Scheme which widely used in the US and China Mainland. This reform will not only remove some overlapping and obsolete but also add some more interesting elective subjects."
  HKG_patriotic_education_curriculum_reform: "Patriotic Education Curriculum Reform"
@@ -170,6 +169,8 @@
  HKG_form_elite_team: "Form the Elite Team"
  HKG_form_elite_team_desc: ""
 
+ HKG_gong_hei_fat_coi: "Gong Hei Faat Choy"
+ HKG_gong_hei_fat_coi_desc: "The [HKG.GetFlag]Hong Kong, where has just experienced the financial turmoil and entered the new millennium, is facing many economy and social problems. How to solve them, is left to the judgement of people."
  HKG_typhoon_shelter_from_financial_storm: "Shelter from the Financial Storm"
  HKG_typhoon_shelter_from_financial_storm_desc: "The storm has passed, it's time to clean up the mess."
  HKG_merge_into_HKEX: "Merge HKCE and HKFE into HKEX"
@@ -310,6 +311,8 @@
  HKG_idea_patriotic_education_reform_desc: "Patriotic education is missing from the existing Hong Kong education curriculum. We will add Liberal Studies to fill that gap."
  HKG_idea_chinese_based_education_reform: "Chinese-based Education Reform"
  HKG_idea_chinese_based_education_reform_desc: "All schools in Hong Kong must teach in Chinese. Our children must be able to speak Chinese."
+ HKG_rise_of_internet: "The Rise of the Internet"
+ HKG_rise_of_internet_desc: "The internet has brought a new direction for human development, but no one knows if it is just a flash in the pan, or the development trend for the next few decades..."
  HKG_idea_SARS_outbreak: "Impact of SARS"
  HKG_idea_SARS_outbreak_desc: "SARS has had a huge impact on our society."
 
@@ -319,6 +322,7 @@
  Basic_Law_HKG_idea_tt: "This idea will be cancalled after §H[HKG.GetFlag]Hong Kong§! Declare its §RIndependent.§!"
  HKG_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[HKG.GetFlag]Hong Kong§! is not allowed to have any army and cannot change its military policy.§!"
  HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §C£HKG_Conservative Pro-establishment camp§!, §8£HKG_conservatism Pan-democracy camp§! and §G£generic_Nat_Populism_small Localist camp§!. Seats in the Legislative Council are decided by their approval ratings."
+ HKG_triad_decision_mutually_exclusive_tt: "You could only take one of these decisions at the same time."
 
  OPEN_LegCo_BUTTON: "§YLegislative Council§! of [HKG.GetFlag]Hong Kong S.A.R"
  OPEN_LegCo_BUTTON_TT: "§YThe Legislative Council§! of the [HKG.GetFlag]Hong Kong S.A.R. is the unicameral legislature of Hong Kong. It sits under China's \"one country, two systems\" constitutional arrangement, and is the power centre of Hong Kong's hybrid representative democracy."
@@ -417,6 +421,12 @@
  hongkong.10.a: "Hong Kong's electoral system will maintain the status quo."
  hongkong.10.b: "We don't quite agree with directly universal suffrage, but we'll support some gradual and orderly electoral reforms."
  hongkong.10.c: "Might as well get radical and just allow universal suffrage!"
+ hongkong.11.t: "The PCCW merges with The HKT"
+ hongkong.11.d: "Recently, Cable & Wireless announced its plan to sell Hong Kong Telecom to SingTel, despite objections from the Chinese mainland government. However, PCCW, owned by Li Tzar-kai, the son of Li Ka-shing, also participated in the bidding and ultimately won. Following the announcement of PCCW's merger with Hong Kong Telecom, PCCW's share price soared from a few cents to HK$28.50 by the close of trading on the same day, and its market capitalisation once exceeded HK$250 billion."
+ hongkong.11.a: "The internet is such a great thing!"
+ hongkong.12.t: "The Impact of the Dot-com bubble"
+ hongkong.12.d: "As the dot-com bubble burst, PCCW's stock price, which had just completed a merger a few months earlier, plummeted by 98%, resulting in significant negative equity. PCCW had no choice but to plan the sale of its core business to alleviate its financial difficulties."
+ hongkong.12.a: "New Millennia, New Problems..."
  hongkong_legco.1.t: "The Seats of [GetYear] LegCo"
  hongkong_legco.1.d: "Here is the calculate event for the seats of LegCo.\n<WIP>"
  hongkong_legco.1.a: "Got it."
@@ -427,9 +437,9 @@
  hongkong_news.5.t: "SARS Outbreak"
  hongkong_news.5.d: "An outbreak of a severe pneumonia virus known as \"SARS\" has occurred in Guangdong and Hong Kong. Despite claims by mainland officials that it has been effectively contained, the outbreak continues in Hong Kong. The WHO has now issued a travel warning to Southern China and Hong Kong. It says it poses a world health threat. So far one person has died as a result. The Hong Kong government has begun mandatory quarantine measures for those suspected of being infected."
  hongkong_news.5.a: "Oh damn, our tourism is getting worse..."
- hongkong_news.5.b: "Arrest the incompetent officials and deal with the outbreak in a transparent manner." 
- hongkong_news.5.c: "We need to continue to hide the real data to maintain social stability."
- hongkong_news.5.d: "Oh damn..."
+ hongkong_news.5.b: "Arrest the incompetent officials and deal with the outbreak in a transparent manner." #for china
+ hongkong_news.5.c: "We need to continue to hide the real data to maintain social stability." #for china
+ hongkong_news.5.d: "Oh damn..." #for other countries
  #Opinion Modifier
  HKG_european_bussiness_opinion: "Improve Trade with European Bussinessmen"
  HKG_chinese_entrepreneurs_opinion: "Improve Trade with Our Mainland Entrepreneurs"
