--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -1483,6 +1483,10 @@ MEX_mandatory_electroninc_invoicing: "Mandatory Electronic Invoicing"
 MEX_mandatory_electroninc_invoicing_desc: ""
 MEX_whistle_blower_programs: "Whistle Blower Programs"
 MEX_whistle_blower_programs_desc: ""
+
+
+### CATHOLIC CHURCH ###
+
 MEX_the_catholic_church: "The Catholic Church"
 MEX_the_catholic_church_desc: ""
 MEX_a_secular_mexico: "A Secular Mexico"
@@ -1505,6 +1509,10 @@ MEX_a_pluralist_mexico: "A Pluralist Mexico"
 MEX_a_pluralist_mexico_desc: ""
 MEX_a_catholic_government: "A Catholic Government"
 MEX_a_catholic_government_desc: ""
+
+
+### MEXICAN FOREIGN POLICY ###
+
 MEX_mexican_foreign_policy: "Mexican Foreign Policy"
 MEX_mexican_foreign_policy_desc: ""
 MEX_claiming_central_america: "Claiming Central America"
