--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -38,7 +38,7 @@
  HUN_nationalist_claims_UKR: "Claim Hungarian Carpathia"
  HUN_nationalist_claims_UKR_desc: "The Hungarian population in Ukraine suffered for too long. We must seek reunification with them."
  NOR_nationalist_claims_DEN: "Claim back Grønland and Færøyene"
- NOR_nationalist_claims_DEN_desc: "Always historical parts of Norway, our possessions were illegally handed away to [DEN.GetNameWithFlag] by [SWE.GetNameWithFlag]. Not cool. It should be self-evident that we want them back."
+ NOR_nationalist_claims_DEN_desc: "Grønland and Færøyene always historical parts of Norway, but our possessions were illegally handed away to [DEN.GetNameWithFlag] by [SWE.GetNameWithFlag]. This is not cool. It should be self-evident that we want them back."
  NOR_nationalist_claims_ENG: "Claim Shetland"
  NOR_nationalist_claims_ENG_desc: "Shetland is closer culturally to Norway than to Scotland or [ENG.GetNameWithFlag]. They would be happier under us."
  NOR_nationalist_claims_SCO: "Claim Shetland"
