The Passing of Leslie Cheung event

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -440,6 +440,9 @@
  hongkong_news.5.b: "Arrest the incompetent officials and deal with the outbreak in a transparent manner." #for china
  hongkong_news.5.c: "We need to continue to hide the real data to maintain social stability." #for china
  hongkong_news.5.d: "Oh damn..." #for other countries
+ hongkong_news.6.t: "The Passing of Leslie Cheung"
+ hongkong_news.6.d: "The world-renowned Hong Kong singer, actor and icon Leslie Cheung committed suicide at the age of 46 by jumping from a building at the Mandarin Hotel in Hong Kong due to depression. Leslie Cheung won the hearts of countless fans with his heartfelt songs, superb acting skills and unique personal charisma. And his passing shocked the entire Chinese community, with many people deeply saddened and lost.\n\nLeslie Cheung's passing is not only a significant loss to the entertainment industry but also a cultural and spiritual blow. His music and film works will continue to influence and inspire future artists and audiences, but his absence will forever leave an unfillable void."
+ hongkong_news.6.a: "We lost a great artist today."
  #Opinion Modifier
  HKG_european_bussiness_opinion: "Improve Trade with European Bussinessmen"
  HKG_chinese_entrepreneurs_opinion: "Improve Trade with Our Mainland Entrepreneurs"
