gold in Ukraine

--- a/localisation/english/MD_focus_UKR_l_english.yml
+++ b/localisation/english/MD_focus_UKR_l_english.yml
@@ -1199,7 +1199,7 @@
  UKR_zelenskiy_socialist_TT: "§YZelenskyy§! will change his §BOutlook§!!"
  UKR_zelenskiy_formed_TT: "£ukr_servant_of_the_people §YThe Servant of the People§! Party will be Created!"
  UKR_zelenskiy_here_TT: "£ukr_servant_of_the_people §YThe Servant of the People§! Party Must be Created!"
- UKR_zelenskiy_pizdec_TT: "§RPerforming this trick will cause a repeat of the events of the series: Servant of the People. Ukraine will be fragmented!!!!§!"
+ UKR_zelenskiy_pizdec_TT: "§RCompleted this focus will cause a repeat of the events of the series: Servant of the People. Ukraine will be fragmented!!!!§!"
  ##########Events##########
  ukr_zelenskiy.1.t: "Surprising Announcement"
  ukr_zelenskiy.1.d: "Today, Volodymyr Zelenskyy made a surprising announcement. In this Statement he said that he renounced the ideas of libertarianism and "by the request of the majority" adopted the ideas of socialism. Also, the president announced that Ukraine will strengthen ties with the West and will try to attract Western investors."
@@ -2389,6 +2389,8 @@
  UKR_laz_desc: "LAZ Holding company has a subsidiary factory in Lviv, Ukraine that specializes in the production of buses. The company recently fell on some hard times due to the collapse of the Soviet Union nine years prior. We could use this as an opportunity to help boost the region and its marketability."
  UKR_land_land: "Continue The Land Reform"
  UKR_land_land_desc: "We are ready to continue the land reform that began in the last century and move it forward"
+ UKR_zaporozhia_gold: "Muzhievo Gold Mine"
+ UKR_zaporozhia_gold_desc: "We will finally attract investors and start developing these mines with gold deposits"
  UKR_monobank: "Monobank"
  UKR_monobank_desc: "Monobank is a Ukrainian direct bank.Like all of the existing neobanks in Ukraine, it operates using a banking license of a parent bank, namely, Universal Bank, which is a part of the TAS Group and belongs to Ukrainian businessman Serhiy Tihipko"
  UKR_zaz: "ZAZ"
