--- a/localisation/english/MD_focus_MEX_l_english.yml
+++ b/localisation/english/MD_focus_MEX_l_english.yml
@@ -851,8 +851,8 @@ MEX_respecting_human_rights: "Respecting Human Rights"
 MEX_respecting_human_rights_desc: ""
 MEX_latin_regional_leadership: "Latin Regional Leadership"
 MEX_latin_regional_leadership_desc: ""
-MEX_renewable_energy_investments: "Renewable Energy Investments"
-MEX_renewable_energy_investments_desc: ""
+MEX_clean_energy_investments: "Clean Energy Investments"
+MEX_clean_energy_investments_desc: ""
 MEX_supporting_clean_energy: "Supporting Clean Energy"
 MEX_supporting_clean_energy_desc: ""
 MEX_military_enchancements: "Military Enchancement"
