Botswana achievements + a small rework

--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -350,6 +350,11 @@
  attack_helicopter4_desc: "An attack helicopter is a military helicopter equipped with offensive weapons. Its main weapons are rapid-fire automatic weapons (cannons and machine guns), rocket launchers, and precision-guided weapons (missiles). Many attack helicopters can also be equipped with anti-aircraft missiles, but they are mainly used for self-defense. Today's attack helicopters are similar in function to fixed-wing attack aircraft and are specifically designed to attack ground targets such as infantry, armored vehicles, and buildings."
  attack_helicopter5: "ATK Helicopter 2035"
  attack_helicopter5_desc: "An attack helicopter is a military helicopter equipped with offensive weapons. Its main weapons are rapid-fire automatic weapons (cannons and machine guns), rocket launchers, and precision-guided weapons (missiles). Many attack helicopters can also be equipped with anti-aircraft missiles, but they are mainly used for self-defense. Today's attack helicopters are similar in function to fixed-wing attack aircraft and are specifically designed to attack ground targets such as infantry, armored vehicles, and buildings."
+ nsb_attack_helicopter_tech_1: "1st Gen ATK Helicopter"
+ nsb_attack_helicopter_tech_2: "2nd Gen ATK Helicopter"
+ nsb_attack_helicopter_tech_3: "3rd Gen ATK Helicopter"
+ nsb_attack_helicopter_tech_4: "4th Gen ATK Helicopter"
+ nsb_attack_helicopter_tech_5: "5th Gen ATK Helicopter"
 
  submarine_1: "Submarine Engineering"
  submarine_1_desc: "Researching This Will Allow Us To Research Further Submarines"
