--- a/Changelog.txt
+++ b/Changelog.txt
@@ -46,6 +46,7 @@ v1.10.3
   - Reworked Botswana's anti-poaching mechanic to be less of a clickfest
   - Reworked modifiers of Coal Powered Nation/Renewable Powered Nation for Botswana
   - Rebalanced a lot of Botswana's tree (focus durations, monetary costs, bonuses etc.)
+  - Added Army General for POL
 
  Localisation
   - Major fixes and improvements to the Russian localization
