Fixed a number of small errors

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ v1.10.3
 
  AI:
   - Made the AI for Africa more dynamic to ditch the CFA Franc
+  - Made the American AI more likely to intervene in Haiti when George Bush is in power
 
  Balance:
   - INCREASED PRODUCTIVITY: NKO, CUB
@@ -40,6 +41,7 @@ v1.10.3
   - Botswana's Buy Gunships focus now correctly gives helicopters into stockpile
   - Botswana's Replace F-4s focus now works even if you are a poor person without all DLC
   - Fixed the debt button not being able to be clicked when you have "Incoming Financial Collapse"
+  - Fixed the double infrastructure for Kanto if you take Automotive Industries and then the Northern Expressways in the Japanese tree
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
@@ -51,6 +53,8 @@ v1.10.3
  Localisation
   - Major fixes and improvements to the Russian localization
   - Added a better tooltip for a trigger when Libya is not ruled by the Gaddafis
+  - Fixed a number of small typoes in the Nigerian focus tree and the events
+  - Fixed a option for the event issue showing the wrong localization in the Operation Secure Tomorrow event
 
 
 v1.10.2
