Missing Ag District

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -56,6 +56,9 @@ v1.10.3
   - Fixed a number of small typoes in the Nigerian focus tree and the events
   - Fixed a option for the event issue showing the wrong localization in the Operation Secure Tomorrow event
 
+ Used Interface:
+  - Fixed the total number of employed persons for Commercialized Agriculture Districts not being present in the tooltip for Millions Worker per Sector
+
 
 v1.10.2
 
