Fixed Armenian focuses for NSB

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -42,6 +42,7 @@ v1.10.3
   - Botswana's Replace F-4s focus now works even if you are a poor person without all DLC
   - Fixed the debt button not being able to be clicked when you have "Incoming Financial Collapse"
   - Fixed the double infrastructure for Kanto if you take Automotive Industries and then the Northern Expressways in the Japanese tree
+  - Fixed broken NSB focuses and a broken Armenian purchase focus
 
  Content:
   - Increased the priority of French decisions so they appear near the top rather than the bottom of the list
